<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wall"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">


        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:hint="@string/edit_text"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/question_1"
            android:textColor="@color/text_color"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_1_anser_1" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_1_anser_2" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/question_2"
            android:textColor="@color/text_color"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_2_anser_1"
                android:onClick="onRadioButtonClicked2"

                />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_2_anser_2"
                android:onClick="onRadioButtonClicked2"

                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/question_3"
            android:textColor="@color/text_color"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_3_anser_1"
                android:onClick="onRadioButtonClicked3"

                />

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_3_anser_2"
                android:onClick="onRadioButtonClicked3"

                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/question_4"
            android:textColor="@color/text_color"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_4_anser_1"
                android:onClick="onRadioButtonClicked4"

                />

            <RadioButton
                android:id="@+id/radio8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_padding"
                android:text="@string/question_4_anser_2"
                android:onClick="onRadioButtonClicked4"

                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/question_5"
            android:textColor="@color/text_color"/>

        <CheckBox android:id="@+id/checkbox_1"
            android:paddingLeft="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_anser_1"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_2"
            android:paddingLeft="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_anser_2"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_3"
            android:paddingLeft="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_anser_3"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_4"
            android:paddingLeft="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_anser_4"
            android:onClick="onCheckboxClicked"/>


        <Button
            android:id="@+id/score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/small_margin"
            android:text="score" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/small_margin"
            android:text="submit" />


    </LinearLayout>
</ScrollView>



